# drf-home-work

./: .env  .template.env  README.md  pyproject.toml
apps/lms/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
apps/lms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_course_user.py  0004_course_price.py  0005_lesson_price.py
apps/payments/: models.py  serializers.py  services.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_remove_payment_price_id_payment_course_and_more.py
apps/users/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/users/management/commands/: createmoderator.py  createsu.py  createsuperuser.py  init.py
apps/users/migrations/: 0001_initial.py  0002_subscription.py  0002_user_avatar_user_city_user_phone.py  0003_delete_payment.py  0003_payment.py  0004_alter_payment_course.py
config/: celery.py  settings.py  urls.py
